Update LEH email template for improved layout and contact information
- Adjusted table widths in the email template for better alignment and presentation.
- Updated contact phone number for consistency across the template.
- Converted privacy policy and terms and conditions text into clickable links for enhanced user experience.

--- a/src/backend-templates/email/leh-email-template.ejs
+++ b/src/backend-templates/email/leh-email-template.ejs
@@ -817,7 +817,7 @@
                                                     <table class=t86 role=presentation cellpadding=0 cellspacing=0
                                                       style="Margin-left:auto;Margin-right:auto;">
                                                       <tr>
-                                                        <td width=540 class=t85 style="width:590px;">
+                                                        <td width=540 class=t85 style="width:700px;">
                                                           <table class=t84 role=presentation cellpadding=0 cellspacing=0
                                                             width=100% style="width:100%;">
                                                             <tr>
@@ -828,7 +828,7 @@
                                                                       cellspacing=0 align=center valign=top>
                                                                       <tr class=t79>
                                                                         <td></td>
-                                                                        <td class=t78 width=265 valign=top>
+                                                                        <td class=t78 width=400 valign=top>
                                                                           <div class=t75
                                                                             style="mso-line-height-rule:exactly;mso-line-height-alt:18px;line-height:18px;font-size:1px;display:block;">
                                                                             &nbsp;&nbsp;</div>
@@ -886,7 +886,7 @@
                                               <p class=t92
                                                 style="margin:0;Margin:0;font-family:DM Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                 Need help? Reach out at info@londonelitehealth.com or call at
-                                                +442081545588.</p>
+                                                +442074860701</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -1069,7 +1069,7 @@
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
                                                                                 <p class=t126
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  +442081545588</p>
+                                                                                  +442074860701</p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -1131,9 +1131,9 @@
                                                                             <tr>
                                                                               <td class=t144
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <p class=t143
+                                                                                <a href="https://sendscript.com/privacy-policy" target="_blank" class=t143
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  Privacy Policy</p>
+                                                                                  Privacy Policy</a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -1145,9 +1145,9 @@
                                                                             <tr>
                                                                               <td class=t148
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <p class=t147
+                                                                                <a href="https://sendscript.com/terms-and-conditions" target="_blank" class=t147
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  Terms and Conditions</p>
+                                                                                  Terms and Conditions</a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
