--- a/src/templates/send-token.ejs
+++ b/src/templates/send-token.ejs
@@ -359,7 +359,7 @@
                                             <table class=t180 role=presentation cellpadding=0 cellspacing=0 width=100%
                                                 style="width:100%;">
                                                 <tr>
-                                                    <td class=t179
+                                                    <td` class=t179
                                                         style="overflow:hidden;background-color:#FFFFFF;padding:32px 30px 32px 30px;border-radius:20px 20px 20px 20px;">
                                                         <table role=presentation width=100% cellpadding=0 cellspacing=0
                                                             style="width:100% !important;">
