feat: Implement insurance and invoice email sending functionality and update invoice template styling.

--- a/src/templates/invoice-email-template.ejs
+++ b/src/templates/invoice-email-template.ejs
@@ -714,10 +714,15 @@
                                                                                             <p class="t51"
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:20px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                                                 We&#x2019;ve shared your
-                                                                                                invoice #<%= invoice_code %>
-                                                                                                dated <%= invoice_date %> for
-                                                                                                the services provided at
-                                                                                                <%= clinic_details.name %>.The
+                                                                                                invoice <span class="t206"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:20px;font-weight:600;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">
+                                                                                                #<%= invoice_code %></span>
+                                                                                                dated <span class="t206"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:20px;font-weight:600;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">
+                                                                                                <%= invoice_date %></span> for
+                                                                                                the services provided at <span class="t206"
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:20px;font-weight:600;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">
+                                                                                                <%= clinic_details.name %></span>.The
                                                                                                 invoice is attached for
                                                                                                 your reference, and you
                                                                                                 can make the payment
@@ -1031,7 +1036,7 @@
                                                                                                                                                                                                                                     class="t85">
                                                                                                                                                                                                                                     <p class="t84"
                                                                                                                                                                                                                                         style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:20px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;letter-spacing:-0.56px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                                                                                                                                                        Hospital
+                                                                                                                                                                                                                                        Clinic
                                                                                                                                                                                                                                     </p>
                                                                                                                                                                                                                                 </td>
                                                                                                                                                                                                                             </tr>
@@ -2009,13 +2014,13 @@
                                                                                                                     <tr>
                                                                                                                         <td
                                                                                                                             class="t250">
-                                                                                                                            <a href="#"
+                                                                                                                            <a href="https://www.sendscript.com/"
                                                                                                                                 style="font-size:0px;"
                                                                                                                                 target="_blank"><img
                                                                                                                                     class="t249"
                                                                                                                                     style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;"
-                                                                                                                                    width="16"
-                                                                                                                                    height="2"
+                                                                                                                                    width="91"
+                                                                                                                                    height="14"
                                                                                                                                     alt=""
                                                                                                                                     src="https://336a4429-218f-473f-a19e-8ceb6e4d3e85.b-cdn.net/e/d27015a1-7781-4656-a822-bdd2da8aaf79/354fbc06-cf05-4c18-9314-2f1b9cb1939e.png" /></a>
                                                                                                                         </td>
